white-space scrollbar fix

--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -159,3 +159,6 @@
 .btn-default {
 	@include button-variant(#ddd, #ddd);
 }
+.settingsIndexPage pre{
+  white-space: pre-line;
+}
